name: postgresql-orm
version: 0.0
cabal-version: >= 1.14
build-type: Simple
license: GPL
author: Amit Levy and David Mazieres

executable pg_migrate
  default-language: Haskell2010
  Main-is: pg_migrate.hs
  ghc-options: -Wall
  build-depends: base < 6
               , bytestring
               , directory
               , filepath
               , postgresql-simple
               , process

library
  default-language: Haskell2010
  build-depends: base < 6
               , blaze-builder
               , bytestring
               , directory
               , filepath
               , ghc-prim
               , ListLike
               , postgresql-simple
               , process
               , text
               , time
               , transformers
               , unix
               , vector
  ghc-options: -Wall
  exposed-modules: Data.AsTypeOf
                 , Data.GetField
                 , Data.RequireSelector
                 , Database.PostgreSQL.Devel
                 , Database.PostgreSQL.Describe
                 , Database.PostgreSQL.Escape
                 , Database.PostgreSQL.Migrate
                 , Database.PostgreSQL.Migrations
                 , Database.PostgreSQL.ORM
                 , Database.PostgreSQL.ORM.Association
                 , Database.PostgreSQL.ORM.CreateTable
                 , Database.PostgreSQL.ORM.DBSelect
                 , Database.PostgreSQL.ORM.Model
                 , Database.PostgreSQL.ORM.SqlType
                 , Database.PostgreSQL.ORM.Validations
  other-extensions: FlexibleContexts
                  , FlexibleInstances
                  , FunctionalDependencies
                  , MultiParamTypeClasses
                  , OverlappingInstances
                  , OverloadedStrings
                  , TypeOperators
                  , UndecidableInstances
               -- , DefaultSignatures, DeriveGeneric
