name: postgresql-orm
version: 0.5.0
cabal-version: >= 1.14
build-type: Simple
license: GPL
license-file: LICENSE
author: Amit Levy and David Mazieres
maintainer: amit@amitlevy.com
category: Database
synopsis: An ORM (Object Relational Mapping) and migrations DSL for PostgreSQL.
data-files: man/man1/pg_migrate.1 man/man5/pg_migrate.5 static/migration.hs
description:
  An ORM (Object Relational Mapping) and migrations DSL for PostgreSQL. See
  "Database.PostgreSQL.ORM" for documentation.

executable pg_migrate
  default-language: Haskell2010
  Main-is: pg_migrate.hs
  ghc-options: -Wall
  build-depends: base < 6
               , blaze-builder >= 0.4
               , bytestring
               , bytestring-builder
               , directory
               , filepath
               , ghc-prim
               , mtl
               , old-locale
               , postgresql-simple >= 0.4.1.0
               , process
               , time

library
  default-language: Haskell2010
  build-depends: base < 6
               , aeson
               , blaze-builder > 0.4
               , bytestring
               , bytestring-builder
               , directory
               , filepath
               , ghc-prim
               , mtl
               , old-locale
               , postgresql-simple
               , process
               , text
               , time
               , transformers
               , unix
               , unordered-containers
               , vector
  ghc-options: -Wall -fno-warn-unused-do-bind
  exposed-modules: Data.GetField
                 , Data.RequireSelector
                 , Database.PostgreSQL.Devel
                 , Database.PostgreSQL.Describe
                 , Database.PostgreSQL.Escape
                 , Database.PostgreSQL.Migrate
                 , Database.PostgreSQL.Migrations
                 , Database.PostgreSQL.ORM
                 , Database.PostgreSQL.ORM.Association
                 , Database.PostgreSQL.ORM.CreateTable
                 , Database.PostgreSQL.ORM.DBSelect
                 , Database.PostgreSQL.ORM.Model
                 , Database.PostgreSQL.ORM.SqlType
                 , Database.PostgreSQL.ORM.Validations
  other-modules: Paths_postgresql_orm
  other-extensions: FlexibleContexts
                  , FlexibleInstances
                  , FunctionalDependencies
                  , MultiParamTypeClasses
                  , OverlappingInstances
                  , OverloadedStrings
                  , ScopedTypeVariables
                  , TypeOperators
                  , UndecidableInstances

source-repository  head
  type:         git
  location:     https://github.com/alevy/postgresql-orm.git

